fix compiling and Android compatibility